[gd_scene load_steps=54 format=3 uid="uid://bb8nr7p6mt056"]

[ext_resource type="Script" uid="uid://mwyltyeldm4" path="res://Player/Scripts/player.gd" id="1_k53q1"]
[ext_resource type="Texture2D" uid="uid://coudtyx6o3u04" path="res://Player/Sprites/player_sprite.png" id="2_k53q1"]
[ext_resource type="Script" uid="uid://qwkletx8xkdj" path="res://Player/Scripts/states/state_idle.gd" id="4_dkpta"]
[ext_resource type="Script" uid="uid://bkfuqeti783li" path="res://Player/Scripts/player_state_machine.gd" id="4_lfmf2"]
[ext_resource type="Script" uid="uid://6je8bp3f2twi" path="res://Player/Scripts/states/state_walk.gd" id="5_lfmf2"]
[ext_resource type="Script" uid="uid://brxt453p4en6r" path="res://Player/Scripts/states/state_attack.gd" id="6_pisgm"]
[ext_resource type="Script" uid="uid://balw8bf16tnb1" path="res://Player/Scripts/states/state_stun.gd" id="7_b1ygp"]
[ext_resource type="AudioStream" uid="uid://15dhy2s8xy1a" path="res://Player/Audio/SwordSwoosh.wav" id="7_vtle1"]
[ext_resource type="Script" uid="uid://eknh08yn65br" path="res://Player/Scripts/PlayerInteractiosHost.gd" id="8_00tjw"]
[ext_resource type="Script" uid="uid://dbm16y8n8apf" path="res://Player/Scripts/states/state_death.gd" id="8_o28un"]
[ext_resource type="PackedScene" uid="uid://cpfcvndbajgx7" path="res://GeneralNodes/HurtBox/hurt_box.tscn" id="8_od3ui"]
[ext_resource type="Script" uid="uid://wxike36nhlag" path="res://Player/Scripts/player_camera.gd" id="9_x3vf3"]
[ext_resource type="PackedScene" uid="uid://dmdp2fi7bbquq" path="res://GeneralNodes/Hitbox/hit_box.tscn" id="11_apopc"]
[ext_resource type="Script" uid="uid://dstjgms7ct84o" path="res://Player/Scripts/states/state_dash.gd" id="11_n471f"]
[ext_resource type="AudioStream" uid="uid://dkbhvl50ijrnx" path="res://Player/Sprites/huwh.wav" id="12_7emwf"]
[ext_resource type="Script" uid="uid://cojeshm42smt7" path="res://Player/Scripts/push_area.gd" id="12_gu6f8"]
[ext_resource type="AudioStream" uid="uid://cjunytfc1brw4" path="res://Player/Audio/hit_player.wav" id="13_gu6f8"]
[ext_resource type="Script" uid="uid://c45yxdqcofjmf" path="res://Player/Scripts/abilities/abilities.gd" id="15_lfmf2"]
[ext_resource type="AudioStream" uid="uid://bohmwbmrmqwd5" path="res://Player/Sprites/level_up_jingle.wav" id="16_b1ygp"]
[ext_resource type="PackedScene" uid="uid://woymg6gf84s1" path="res://GeneralNodes/ItemMagnet/item_magnet.tscn" id="16_pisgm"]
[ext_resource type="FontFile" uid="uid://cnrqk38ddqqwy" path="res://GUI/fonts/m5x7.ttf" id="19_o28un"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ae8na"]
radius = 4.98132

[sub_resource type="CircleShape2D" id="CircleShape2D_00tjw"]
radius = 11.0

[sub_resource type="Animation" id="Animation_btcbx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/AttackHurtBox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 7)]
}

[sub_resource type="Animation" id="Animation_00tjw"]
resource_name = "attack_down"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [36, 39]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/AttackHurtBox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 7)]
}

[sub_resource type="Animation" id="Animation_x3vf3"]
resource_name = "attack_side"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [42, 45]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/AttackHurtBox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(7, 0)]
}

[sub_resource type="Animation" id="Animation_apopc"]
resource_name = "attack_up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [48, 51]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/AttackHurtBox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -2)]
}

[sub_resource type="Animation" id="Animation_n471f"]
resource_name = "dash_down"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [18]
}

[sub_resource type="Animation" id="Animation_hshwv"]
resource_name = "dash_side"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [24]
}

[sub_resource type="Animation" id="Animation_7emwf"]
resource_name = "dash_up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [30]
}

[sub_resource type="Animation" id="Animation_b1ygp"]
resource_name = "death"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [54, 57]
}

[sub_resource type="Animation" id="Animation_4ntmi"]
resource_name = "idle_down"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 2]
}

[sub_resource type="Animation" id="Animation_k53q1"]
resource_name = "idle_side"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [7, 9]
}

[sub_resource type="Animation" id="Animation_gwnis"]
resource_name = "idle_up"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [13, 15]
}

[sub_resource type="Animation" id="Animation_5htga"]
resource_name = "stun_down"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}

[sub_resource type="Animation" id="Animation_gu6f8"]
resource_name = "stun_side"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [6]
}

[sub_resource type="Animation" id="Animation_p5o4e"]
resource_name = "stun_up"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [12]
}

[sub_resource type="Animation" id="Animation_fhl08"]
resource_name = "walk_down"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [18, 23]
}

[sub_resource type="Animation" id="Animation_vtle1"]
resource_name = "walk_side"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [24, 29]
}

[sub_resource type="Animation" id="Animation_od3ui"]
resource_name = "walk_up"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [30, 35]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_00tjw"]
_data = {
&"RESET": SubResource("Animation_btcbx"),
&"attack_down": SubResource("Animation_00tjw"),
&"attack_side": SubResource("Animation_x3vf3"),
&"attack_up": SubResource("Animation_apopc"),
&"dash_down": SubResource("Animation_n471f"),
&"dash_side": SubResource("Animation_hshwv"),
&"dash_up": SubResource("Animation_7emwf"),
&"death": SubResource("Animation_b1ygp"),
&"idle_down": SubResource("Animation_4ntmi"),
&"idle_side": SubResource("Animation_k53q1"),
&"idle_up": SubResource("Animation_gwnis"),
&"stun_down": SubResource("Animation_5htga"),
&"stun_side": SubResource("Animation_gu6f8"),
&"stun_up": SubResource("Animation_p5o4e"),
&"walk_down": SubResource("Animation_fhl08"),
&"walk_side": SubResource("Animation_vtle1"),
&"walk_up": SubResource("Animation_od3ui")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p5o4e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gu6f8"]
size = Vector2(24, 21.3333)

[sub_resource type="CircleShape2D" id="CircleShape2D_5htga"]
radius = 5.0

[sub_resource type="Animation" id="Animation_lfmf2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_pisgm"]
resource_name = "damaged"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.0980392), Color(1, 1, 1, 1), Color(1, 1, 1, 0.196078), Color(1, 1, 1, 1), Color(1, 1, 1, 0.392157), Color(1, 1, 1, 1), Color(1, 1, 1, 0.588235), Color(1, 1, 1, 1)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Audio/AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("13_gu6f8")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_dkpta"]
resource_name = "defaul"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_o28un"]
resource_name = "level_up"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 2, 0.942, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6, 0.866667),
"transitions": PackedFloat32Array(-2, 2, 0.5),
"update": 0,
"values": [Vector2(-20, -42), Vector2(-20, -64), Vector2(-20, -58)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Label:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GPUParticles2D:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "audio"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Audio/AudioStreamPlayer2D")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"clips": [{
"end_offset": 0.963058,
"start_offset": 0.0,
"stream": ExtResource("16_b1ygp")
}],
"times": PackedFloat32Array(0)
}
tracks/5/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b1ygp"]
_data = {
&"RESET": SubResource("Animation_lfmf2"),
&"damaged": SubResource("Animation_pisgm"),
&"defaul": SubResource("Animation_dkpta"),
&"level_up": SubResource("Animation_o28un")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_b1ygp"]
radius = 15.0

[sub_resource type="Gradient" id="Gradient_n471f"]
offsets = PackedFloat32Array(0.03, 0.97, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.21134, 0.21134, 0.21134, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_7emwf"]
gradient = SubResource("Gradient_n471f")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_hshwv"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 24.0
gravity = Vector3(0, -250, 0)
color = Color(0.130138, 0.554014, 0.256876, 1)
color_ramp = SubResource("GradientTexture1D_7emwf")

[node name="Player" type="CharacterBody2D"]
collision_mask = 16
motion_mode = 1
wall_min_slide_angle = 0.174533
script = ExtResource("1_k53q1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1.606, 1.5)
shape = SubResource("CircleShape2D_ae8na")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -10)
texture = ExtResource("2_k53q1")
hframes = 6
vframes = 10

[node name="AttackHurtBox" parent="Sprite2D" instance=ExtResource("8_od3ui")]
unique_name_in_owner = true
position = Vector2(0, 7)
collision_mask = 256
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/AttackHurtBox"]
shape = SubResource("CircleShape2D_00tjw")
debug_color = Color(0.933327, 3.27289e-06, 9.62615e-07, 0.419608)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_00tjw")
}

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("4_lfmf2")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_dkpta")

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("5_lfmf2")

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("6_pisgm")
attack_sound = ExtResource("7_vtle1")

[node name="Stun" type="Node" parent="StateMachine"]
script = ExtResource("7_b1ygp")

[node name="Death" type="Node" parent="StateMachine"]
script = ExtResource("8_o28un")

[node name="Dash" type="Node" parent="StateMachine"]
script = ExtResource("11_n471f")
move_speed = 250.0
dash_audio = ExtResource("12_7emwf")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)
editor_draw_limits = true
script = ExtResource("9_x3vf3")

[node name="Audio" type="Node" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Audio"]
max_polyphony = 4

[node name="Interactions" type="Node2D" parent="."]
script = ExtResource("8_00tjw")

[node name="Area2D" type="Area2D" parent="Interactions"]
collision_layer = 4
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactions/Area2D"]
scale = Vector2(0.75, 0.75)
shape = SubResource("RectangleShape2D_p5o4e")
debug_color = Color(0, 0.645742, 0.253324, 0.42)

[node name="PushArea" type="Area2D" parent="Interactions"]
collision_layer = 0
collision_mask = 16
monitorable = false
script = ExtResource("12_gu6f8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactions/PushArea"]
position = Vector2(0, -1.19209e-07)
scale = Vector2(0.75, 0.75)
shape = SubResource("RectangleShape2D_gu6f8")
debug_color = Color(0.919454, 0.17378, 0.55802, 0.42)

[node name="HitBox" parent="." instance=ExtResource("11_apopc")]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_5htga")
debug_color = Color(0.6948, 0.688739, 0, 0.419608)

[node name="EffectAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_b1ygp")
}

[node name="Abilities" type="Node" parent="."]
script = ExtResource("15_lfmf2")

[node name="ItemMagnet" parent="." instance=ExtResource("16_pisgm")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemMagnet"]
shape = SubResource("CircleShape2D_b1ygp")
debug_color = Color(1, 0.116925, 0.142376, 0)

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -20.0
offset_top = -42.0
offset_right = 19.0
offset_bottom = -24.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_fonts/font = ExtResource("19_o28un")
text = "Lv up"
horizontal_alignment = 1

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
amount = 50
lifetime = 0.75
one_shot = true
explosiveness = 0.25
process_material = SubResource("ParticleProcessMaterial_hshwv")
